--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 									</thead>
 								<tbody>
       <tr><td>1</td><td>Vision and Mission of Institute and Department</td><td><a href="https://drive.google.com/file/d/1POq7DbTuvbjl0gBScmGqt-FmUSU6cxVn/view?usp=drive_link" target="_blank">View</a></td></tr>
-      <tr><td>2</td><td>POs, PSOs, PEOs, COs</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
+      <tr><td>2</td><td>POs, PSOs, PEOs, COs</td><td><a href="https://drive.google.com/file/d/1L8Y7shMxeyQhgIggZRic6H4UJp5QMenc/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>3</td><td>Academic Calendar of Institute and Department</td><td><a href="https://drive.google.com/file/d/1lP_Gp-1ORXYP0Wwg2bnFKOf1QOpVZtSC/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>4</td><td>Class & Personal Time Table</td><td><a href="https://drive.google.com/file/d/11X3kfGYKVQZg4j-jZndbq5a5GmBjIT7A/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>5</td><td>Syllabus Structure & Course Syllabus</td><td><a href="https://drive.google.com/file/d/1vXGsTxK578Pp16QFt0YC2wkpDhiEzDSi/view?usp=drive_link" target="_blank">View</a></td></tr>
@@ -380,9 +380,9 @@
       <tr><td>14</td><td>List of Slow Learners & Advance Learners</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
       <tr><td>15</td><td>Remedial Class Time Table</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
       <tr><td>16</td><td>Continuous Assessment Sheet</td><td><a href="NA" target="_blank">NA</a></td></tr>
-      <tr><td>17</td><td>Gate Question Papers</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
-      <tr><td>18</td><td>List of Project Guided</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
-      <tr><td>19</td><td>IPR & Patent Details</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
+      <tr><td>17</td><td>Gate Question Papers</td><td><a href="https://www.gatenotes.in/gate-question-paper-mechanical.php" target="_blank">View</a></td></tr>
+      <tr><td>18</td><td>List of Project Guided</td><td><a href="https://drive.google.com/file/d/1CB61C-Nf96ID29wIR9WlwFvVwtkrkR7w/view?usp=sharing" target="_blank">View</a></td></tr>
+      <tr><td>19</td><td>IPR & Patent Details</td><td><a href="https://drive.google.com/drive/folders/1RlD78eRKBXgwjs6S_mr8H6quYqtIKBkW?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>20</td><td>Subject Result Analysis (Last 03 Years)</td><td><a href="https://drive.google.com/file/d/1tXproCS8Q_zlDfAWkwAVGtQRNNlcpg71/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>21</td><td>Students Attendance Register</td><td><a href="https://drive.google.com/file/d/1DWv_kMfQVCbYcJ-0ZP7zzO5rau_G7z7D/view?usp=drive_link" target="_blank">View</a></td></tr>
 							</tbody>
@@ -460,7 +460,7 @@
 									</thead>
 								<tbody>
       <tr><td>1</td><td>Vision and Mission of Institute and Department</td><td><a href="https://drive.google.com/file/d/12rW-6K7Dgujq1wSB2pYdU2DAV1-W3sbQ/view?usp=sharing" target="_blank">View</a></td></tr>
-      <tr><td>2</td><td>POs, PSOs, PEOs, COs</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
+      <tr><td>2</td><td>POs, PSOs, PEOs, COs</td><td><a href="https://drive.google.com/file/d/1L8Y7shMxeyQhgIggZRic6H4UJp5QMenc/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>3</td><td>Academic Calendar of Institute and Department</td><td><a href="https://drive.google.com/file/d/15rQb39LGXYJXedWrSGYT47V6DJYUHeav/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>4</td><td>Class & Personal Time Table</td><td><a href="https://drive.google.com/file/d/1JvIXiNEn4Dg8Sre-ucdT7ybi01OHUw0x/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>5</td><td>Syllabus Structure & Course Syllabus</td><td><a href="https://drive.google.com/file/d/1SxsXXo02V1R3KIbl2K5_uAHJXbi_9LcT/view?usp=sharing" target="_blank">View</a></td></tr>
@@ -494,8 +494,8 @@
       <tr><td>15</td><td>Remedial Class Time Table</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
       <tr><td>16</td><td>Continuous Assessment Sheet</td><td><a href="https://drive.google.com/file/d/1wbOx8-moNA4KmJ84Iv03NrUkHhkvn9WV/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>17</td><td>Gate Question Papers</td><td><a href="https://www.gatenotes.in/gate-question-paper-mechanical.php" target="_blank">View Web Link</a></td></tr>
-      <tr><td>18</td><td>List of Project Guided</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
-      <tr><td>19</td><td>IPR & Patent Details</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
+      <tr><td>18</td><td>List of Project Guided</td><td><a href="https://drive.google.com/file/d/1CB61C-Nf96ID29wIR9WlwFvVwtkrkR7w/view?usp=sharing" target="_blank">View</a></td></tr>
+      <tr><td>19</td><td>IPR & Patent Details</td><td><a href="https://drive.google.com/drive/folders/1RlD78eRKBXgwjs6S_mr8H6quYqtIKBkW?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>20</td><td>Subject Result Analysis (Last 03 Years)</td><td><a href="https://drive.google.com/file/d/18k9hsf3XTKD0AkSlBO0af50cgFL2pYjD/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>21</td><td>Students Attendance Register</td><td><a href="https://drive.google.com/file/d/1-9H7WqFFpfYNxhjLVM9G6EMe1QSYCKwG/view?usp=sharing" target="_blank">View</a></td></tr>
 							</tbody>
