--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
   <div class="scroll-container">
     <div class="scroll-track">
       <!-- Images repeated twice for seamless loop -->
-      <img src="https://drive.google.com/uc?export=view&id=1EWRFehrm0NGULXABRGazN0Edstsz1D-h" alt="Img1">
-      <img src="https://drive.google.com/uc?export=view&id=1Nm-WQqprdqcxgwq_zQ_qa1VdmNUtdlGH" alt="Img2">
-      <img src="https://drive.google.com/uc?export=view&id=1atJxrLu0ZA4wquXeVdd_H9Xzwwd9SiUV" alt="Img3">
-      <img src="https://drive.google.com/uc?export=view&id=1iGX9WXz0f3kr9E_rtlRBeJ2dq_331QLl" alt="Img4">
+      <img src="https://drive.google.com/uc?export=view&id=1EWRFehrm0NGULXABRGazN0Edstsz1D-h">
+      <img src="https://drive.google.com/uc?export=view&id=1Nm-WQqprdqcxgwq_zQ_qa1VdmNUtdlGH">
+      <img src="https://drive.google.com/uc?export=view&id=1atJxrLu0ZA4wquXeVdd_H9Xzwwd9SiUV">
+      <img src="https://drive.google.com/uc?export=view&id=1iGX9WXz0f3kr9E_rtlRBeJ2dq_331QLl">
 
       <!-- Duplicate for continuous loop -->
-      <img src="https://drive.google.com/uc?export=view&id=1EWRFehrm0NGULXABRGazN0Edstsz1D-h" alt="Img1-dup">
-      <img src="https://drive.google.com/uc?export=view&id=1Nm-WQqprdqcxgwq_zQ_qa1VdmNUtdlGH" alt="Img2-dup">
-      <img src="https://drive.google.com/uc?export=view&id=1atJxrLu0ZA4wquXeVdd_H9Xzwwd9SiUV" alt="Img3-dup">
-      <img src="https://drive.google.com/uc?export=view&id=1iGX9WXz0f3kr9E_rtlRBeJ2dq_331QLl" alt="Img4-dup">
+      <img src="https://drive.google.com/uc?export=view&id=1EWRFehrm0NGULXABRGazN0Edstsz1D-h">
+      <img src="https://drive.google.com/uc?export=view&id=1Nm-WQqprdqcxgwq_zQ_qa1VdmNUtdlGH">
+      <img src="https://drive.google.com/uc?export=view&id=1atJxrLu0ZA4wquXeVdd_H9Xzwwd9SiUV">
+      <img src="https://drive.google.com/uc?export=view&id=1iGX9WXz0f3kr9E_rtlRBeJ2dq_331QLl">
     </div>
   </div>
 
