--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       <tr><td>3</td><td>Academic Calendar of Institute and Department</td><td><a href="https://drive.google.com/file/d/1lP_Gp-1ORXYP0Wwg2bnFKOf1QOpVZtSC/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>4</td><td>Class & Personal Time Table</td><td><a href="https://drive.google.com/file/d/11X3kfGYKVQZg4j-jZndbq5a5GmBjIT7A/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>5</td><td>Syllabus Structure & Course Syllabus</td><td><a href="https://drive.google.com/file/d/1vXGsTxK578Pp16QFt0YC2wkpDhiEzDSi/view?usp=drive_link" target="_blank">View</a></td></tr>
-      <tr><td>6</td><td>Teaching Plan, Laboratory Plan</td><td><a href="https://drive.google.com/file/d/1-TUTiDNwuNDYkzmLZS4PruTg23VZnmyI/view?usp=drive_link" target="_blank">View</a></td></tr>
+      <tr><td>6</td><td>Teaching Plan, Laboratory Plan</td><td><a href="https://docs.google.com/document/d/1XyA7DesG686LmpqM88axFRqgfzRElIjP/edit?usp=sharing&ouid=113396003647894375823&rtpof=true&sd=true" target="_blank">View</a></td></tr>
       <tr>
         <td>7</td>
         <td>
@@ -449,10 +449,10 @@
         </td>
       </tr>
       <tr><td>8</td><td>Content Beyond Syllabus</td><td><a href="https://drive.google.com/file/d/1sybZS5Kk91xlqfxXRvhB_fz3wbmdMCW2/view?usp=drive_link" target="_blank">View</a></td></tr>
-      <tr><td>9</td><td>Last Three Question Papers And its Solution</td><td><a href="https://drive.google.com/file/d/1tXproCS8Q_zlDfAWkwAVGtQRNNlcpg71/view?usp=drive_link" target="_blank">View</a></td></tr>
+      <tr><td>9</td><td>Last Three Question Papers And its Solution</td><td><a href="https://drive.google.com/drive/folders/1tZspneFlH6T5Z6fzwvUuDcxymzEimWQR?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>10</td><td>Referred Journal Papers</td><td><a href="https://drive.google.com/drive/folders/1AR6O2wZfUBuR9viSDQ8yQCavTuvZDgF9?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>11</td><td>Mapping of COs and POs & Attainments</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
-      <tr><td>12</td><td>Gap Identification</td><td><a href="https://drive.google.com/file/d/1JkjIwB-bwftXLSa3Mi6HInh21AOrkcWO/view?usp=drive_link" target="_blank">View</a></td></tr>
+      <tr><td>12</td><td>Gap Identification</td><td><a href="https://drive.google.com/file/d/1yveJoUUPjYdr8rZ4ThD5Ca27z2DzV7ID/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>13</td><td>List of Practicals</td><td><a href="NA" target="_blank">NA</a></td></tr>
       <tr><td>14</td><td>List of Slow Learners & Advance Learners</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
       <tr><td>15</td><td>Remedial Class Time Table</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
@@ -461,7 +461,7 @@
       <tr><td>18</td><td>List of Project Guided</td><td><a href="https://drive.google.com/file/d/1CB61C-Nf96ID29wIR9WlwFvVwtkrkR7w/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>19</td><td>IPR & Patent Details</td><td><a href="https://drive.google.com/drive/folders/1RlD78eRKBXgwjs6S_mr8H6quYqtIKBkW?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>20</td><td>Subject Result Analysis (Last 03 Years)</td><td><a href="https://drive.google.com/file/d/1tXproCS8Q_zlDfAWkwAVGtQRNNlcpg71/view?usp=drive_link" target="_blank">View</a></td></tr>
-      <tr><td>21</td><td>Students Attendance Register</td><td><a href="https://drive.google.com/file/d/1DWv_kMfQVCbYcJ-0ZP7zzO5rau_G7z7D/view?usp=drive_link" target="_blank">View</a></td></tr>
+      <tr><td>21</td><td>Students Attendance Register</td><td><a href="https://docs.google.com/spreadsheets/d/1A2NqA4UJ2nJnUWmyvCaDRgAvS-Tw8IYw/edit?usp=sharing&ouid=113396003647894375823&rtpof=true&sd=true" target="_blank">View</a></td></tr>
 							</tbody>
 						</table>
 
