--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
       <tr><td>3</td><td>Academic Calendar of Institute and Department</td><td><a href="https://drive.google.com/file/d/15rQb39LGXYJXedWrSGYT47V6DJYUHeav/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>4</td><td>Class & Personal Time Table</td><td><a href="https://drive.google.com/file/d/1JvIXiNEn4Dg8Sre-ucdT7ybi01OHUw0x/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>5</td><td>Syllabus Structure & Course Syllabus</td><td><a href="https://drive.google.com/file/d/1SxsXXo02V1R3KIbl2K5_uAHJXbi_9LcT/view?usp=sharing" target="_blank">View</a></td></tr>
-      <tr><td>6</td><td>Teaching Plan, Laboratory Plan</td><td><a href="https://drive.google.com/file/d/1MK0QilbDz5XPvkLD8yr2mtIZTjHx97h3/view?usp=sharing" target="_blank">View</a></td></tr>
+      <tr><td>6</td><td>Teaching Plan, Laboratory Plan</td><td><a href="https://drive.google.com/drive/folders/1gl3mdeg3G0-E_de0OW1MtPRvnCmADmxZ?usp=sharing" target="_blank">View</a></td></tr>
       <tr>
         <td>7</td>
         <td>
@@ -555,7 +555,7 @@
         <td>
           <a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a><br>
           <a href="https://drive.google.com/drive/folders/1oQA6UGLMt9_59trm7Yo2yv5ACT_4TvvA?usp=sharing" target="_blank">View</a><br>
-          <a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a><br>
+          <a href="https://drive.google.com/drive/folders/1ZqltQQ5SIT8QlsWKgqh-b_l7dWYJMHJf?usp=sharing" target="_blank">View</a><br>
           <a href="https://drive.google.com/file/d/1_f14wtu45pWGrtU7QcTpvOT3RELON-gN/view?usp=sharing" target="_blank">View</a><br>
           <a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a><br>
           <a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a>
@@ -569,12 +569,12 @@
       <tr><td>13</td><td>List of Practicals</td><td><a href="https://drive.google.com/file/d/1VgIkk_cNd-_ilLwc1rU0pDyUGkBpna6L/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>14</td><td>List of Slow Learners & Advance Learners</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
       <tr><td>15</td><td>Remedial Class Time Table</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
-      <tr><td>16</td><td>Continuous Assessment Sheet</td><td><a href="https://drive.google.com/file/d/1wbOx8-moNA4KmJ84Iv03NrUkHhkvn9WV/view?usp=sharing" target="_blank">View</a></td></tr>
+      <tr><td>16</td><td>Continuous Assessment Sheet</td><td><a href="https://docs.google.com/spreadsheets/d/1zj-zvSpKI9ckZBlrh9pVdJpPHCS-uEei/edit?usp=sharing&ouid=113396003647894375823&rtpof=true&sd=true" target="_blank">View</a></td></tr>
       <tr><td>17</td><td>Gate Question Papers</td><td><a href="https://www.gatenotes.in/gate-question-paper-mechanical.php" target="_blank">View Web Link</a></td></tr>
       <tr><td>18</td><td>List of Project Guided</td><td><a href="https://drive.google.com/file/d/1CB61C-Nf96ID29wIR9WlwFvVwtkrkR7w/view?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>19</td><td>IPR & Patent Details</td><td><a href="https://drive.google.com/drive/folders/1RlD78eRKBXgwjs6S_mr8H6quYqtIKBkW?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>20</td><td>Subject Result Analysis (Last 03 Years)</td><td><a href="https://drive.google.com/file/d/18k9hsf3XTKD0AkSlBO0af50cgFL2pYjD/view?usp=drive_link" target="_blank">View</a></td></tr>
-      <tr><td>21</td><td>Students Attendance Register</td><td><a href="https://drive.google.com/file/d/1-9H7WqFFpfYNxhjLVM9G6EMe1QSYCKwG/view?usp=sharing" target="_blank">View</a></td></tr>
+      <tr><td>21</td><td>Students Attendance Register</td><td><a href="https://docs.google.com/spreadsheets/d/1HwAXHpR7P3pBLYfFm6HzeVnsom5pBOC5/edit?usp=sharing&ouid=113396003647894375823&rtpof=true&sd=true" target="_blank">View</a></td></tr>
 							</tbody>
 						</table>
 
